# openGauss-server

./: CMakeLists.txt  README.en.md  README.md  build.sh
cmake/src/: build_options.cmake  set_thirdparty_path.cmake
contrib/gms_tcp/: gms_tcp.cpp
contrib/pg_stat_statements/: pg_stat_statements.cpp
contrib/shark/: CMakeLists.txt  Makefile  parallel_schedule  sharksysfuncs.cpp  sharksysfuncs.h  sqlvariant.cpp
contrib/shark/expected/: identity.out  sharksysfunction.out  test_ddl.out  test_sysviews.out  test_sysviews10.out  test_sysviews6.out  test_sysviews9.out
contrib/shark/input/: temp_table_special_prefix.source
contrib/shark/output/: temp_table_special_prefix.source
contrib/shark/sql/: identity.sql  (+4 more)
src/: CMakeLists.txt  Makefile.global.in
src/gausskernel/: CMakeLists.txt  Makefile  Makefile_for_llt  common.mk
src/gausskernel/storage/access/datavec/: CMakeLists.txt  Makefile  diskannbuild.cpp  diskannutils.cpp  hnsw.cpp  hnswadaptor.cpp  hnswbuild.cpp  hnswdelete.cpp  hnswinsert.cpp  hnswlsg.cpp  hnswscan.cpp  hnswutils.cpp  hnswvacuum.cpp  ivfbuild.cpp  ivfflat.cpp  ivfinsert.cpp  ivfscan.cpp  ivfutils.cpp  ivfvacuum.cpp  ogai.cpp  ogai_launcher.cpp  ogai_model_framework.cpp  ogai_model_manager.cpp  ogai_ollama.cpp  ogai_onnx_embedding.cpp  ogai_onnx_mgr.cpp  ogai_openai.cpp  ogai_qwen.cpp  ogai_utils.cpp  ogai_vector_processor.cpp  ogai_worker.cpp  rabitq.cpp  scalarquantizer.cpp  utils.cpp  vectortransformer.cpp
src/gausskernel/storage/access/datavec/ogai_sql/: ogai_functions.sql  ogai_tables.sql
src/include/: gs_thread.h  miscadmin.h
(+491 files in other folders)
